@@ -5,6 +5,8 @@
 * Use libc time routines rather than ad hoc in mjd2date()
 * C++ protectors in antenna_db.h
 * antenna_db.c: allow search by "IVS Name", and fix diameter of Arecibo
+* convert python to python3
+* replace @lbo.us with @nrao.edu email addresses
 
 3.6.0
 * Post DiFX 2.5
